--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.google.sps</groupId>
-  <artifactId>portfolio</artifactId>
+  <artifactId>stanley-portfolio</artifactId>
   <version>1</version>
   <packaging>war</packaging>
 
@@ -27,14 +27,11 @@
 
   <build>
     <plugins>
-      <!-- Provides `mvn package appengine:run` for local testing
-           and `mvn package appengine:deploy` for deploying. -->
       <plugin>
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>appengine-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <!-- TODO: set project ID. -->
           <deploy.projectId>dzhang-sps-summer20</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
